--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   mobile_scanner: ^7.1.3
   share_plus: ^12.0.1
   image_picker: ^1.0.7
+  flutter_markdown: ^0.6.17
 
 dev_dependencies:
   flutter_test:
