--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: ^13.0.3
   firebase_messaging: ^16.0.3
   firebase_ai: ^3.2.0
+  firebase_database: ^12.0.3
 
   # Google Sign-In
   google_sign_in: ^6.2.1
@@ -58,6 +59,12 @@ dependencies:
   share_plus: ^12.0.1
   image_picker: ^1.0.7
   flutter_markdown: ^0.6.17
+  permission_handler: ^11.3.0
+  record: ^5.2.1
+  flutter_soloud: ^3.1.6
+  agora_rtc_engine: ^6.3.2
+  flutter_svg: ^2.0.10
+  vector_math: ^2.1.4
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +76,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+
+dependency_overrides:
+  record_linux: 1.1.1
+  record_windows: 1.0.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -82,9 +93,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
